--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -16,17 +16,21 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a><br />
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+          </li>
+          <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <buttom type="buttom">Order Service</buttom>
+        <button type="button">Order Service</button>
       </section>
       <section>
-        <h2></h2>
+        <h2>Section</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
