--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <ul>
           <li>
             <img
-              src="./images/img.jpg"
+              src="./images/1.jpg"
               alt="Photo Mark Guerrero"
               width="264"
               height="260"
@@ -77,7 +77,7 @@
           </li>
           <li>
             <img
-              src="./images/img (1).jpg"
+              src="./images/2.jpg"
               alt="Photo Tom Ford"
               width="264"
               height="260"
@@ -87,7 +87,7 @@
           </li>
           <li>
             <img
-              src="./images/img (2).jpg"
+              src="./images/3.jpg"
               alt="Photo Camila Garcia"
               width="264"
               height="260"
@@ -97,7 +97,7 @@
           </li>
           <li>
             <img
-              src="./images/img (3).jpg"
+              src="./images/4.jpg"
               alt="Photo Daniel Wilson"
               width="264"
               height="260"
